tests/struct/bad/bug_107.catala_en
## https://github.com/CatalaLang/catala/issues/107

```catala
declaration structure S:
  data x content integer
  data y content integer

declaration structure S:
  data x content integer
  data y content integer

declaration scope A:
  context a content S

scope A:
  definition a equals S { --x : 0 -- y : 1 }
```

```catala-test-cli
$ catala test-scope A
┌─[ERROR]─ 1/3 ─
│
│  struct name "S" already defined
│
│ First definition:
├─➤ tests/struct/bad/bug_107.catala_en:4.23-24:
│   │
│ 4 │ declaration structure S:
│   │                       ‾
├─ https://github.com/CatalaLang/catala/issues/107
│
│ Second definition:
├─➤ tests/struct/bad/bug_107.catala_en:8.23-24:
│   │
│ 8 │ declaration structure S:
│   │                       ‾
└─ https://github.com/CatalaLang/catala/issues/107
┌─[ERROR]─ 2/3 ─
│
│  Duplicate field x in enumeration S
│
├─➤ tests/struct/bad/bug_107.catala_en:9.8-9:
│   │
│ 9 │   data x content integer
│   │        ‾
├─ https://github.com/CatalaLang/catala/issues/107
│
│ First seen here:
├─➤ tests/struct/bad/bug_107.catala_en:5.8-9:
│   │
│ 5 │   data x content integer
│   │        ‾
└─ https://github.com/CatalaLang/catala/issues/107
┌─[ERROR]─ 3/3 ─
│
│  Duplicate field y in enumeration S
│
├─➤ tests/struct/bad/bug_107.catala_en:10.8-9:
│    │
│ 10 │   data y content integer
│    │        ‾
├─ https://github.com/CatalaLang/catala/issues/107
│
│ First seen here:
├─➤ tests/struct/bad/bug_107.catala_en:6.8-9:
│   │
│ 6 │   data y content integer
│   │        ‾
└─ https://github.com/CatalaLang/catala/issues/107
#return code 123#
```
